# RustOS-MoxideOS

./: .dockerignore  .gdbinit  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  build_aarch64.sh  build_riscv.sh  build_x86.sh  fe310.dts  flake.nix  linker.ld  linker_aarch64.ld  linker_riscv.ld  linker_x86_64.ld  riscv64-uefi.json  run_qemu.sh  run_qemu_aarch64.sh  run_qemu_riscv.sh  run_qemu_x86_64.sh  rust-toolchain.toml  rustfmt.toml  x86_64.ld
.cargo/: config.toml
.github/: labeler.yml
.github/workflows/: boot-smoke.yml  build.yml  ci.yml  fmt.yml  kernel-test.yml  kmtest.yml  labeler.yml  lint.yml  qemu-smoke.yml  stale.yml
crates/kmtest/: Cargo.toml
crates/kmtest-macros/: Cargo.toml
crates/scheme-api/: Cargo.toml
crates/scheme-api/src/: lib.rs
docs/: README.md  arch_capability_matrix.md  boot-architecture.md  boot-optimization-checklist.md  booting.md  build-run-contract.md  code_review_wiring_audit.md  design_optimization_suggestions.md  hashing_policy.md  hybrid-kernel-architecture.md  musl_pipeline.md  musl_port.md  owners.md  plan-futex-signal.md  plan-mm-network.md  plan-scheduler-process.md  security_audit.md  status.md  syscall_conformance_matrix.md
linker/: aarch64.ld  riscv64.ld  x86_64-multiboot.ld  x86_64.ld
scripts/ci/: build-userspace.sh  build.sh  collect-logs.sh  install-musl-toolchain.sh  qemu-run.sh  run_qemu.sh
src/: allocator.rs  crt.rs  dt.rs  elf.rs  gdbstub.rs  kernel_main.rs  lib.rs  main.rs  panic.rs  rand.rs  uaccess.rs  utils.rs  wayland.rs
src/acpi/: mod.rs  power.rs
src/allocator/: buddy.rs  fixed_size_block.rs  mod.rs  stats.rs  tests.rs
src/arch/: api.rs  mod.rs
src/block/: mod.rs  virtio_blk.rs
src/console/: console.rs  mod.rs
src/core/: collections.rs  cpu_local.rs  error.rs  fast_hash.rs  mod.rs  panic.rs
src/crt/: compiler_rt.c  crt0.c  memcpy.c  memmove.c  memset.c
src/debug/: README.md  commands.rs  debugcon.rs  ftrace.rs  mod.rs  oops.rs  trace.rs
src/device/: mod.rs
src/display/: console.rs  font.rs  mod.rs
src/drivers/: ahci.rs  amdgpu_gem.rs  bluetooth.rs  clint.rs  drm.rs  e1000e.rs  evdev.rs  framebuffer.rs  gop.rs  gpio.rs  gpu.rs  hid.rs  keyboard.rs  mod.rs  mouse.rs  nic.rs  nvme.rs  pcie.rs  plic.rs  tty.rs  usb.rs  vga.rs  virtio_blk.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  virtio_net_mmio.rs
src/drm/: connector.rs  encoder.rs  framebuffer.rs  gem.rs  mod.rs  plane.rs
src/exec/: elf.rs  mod.rs
src/firmware/: dt.rs  mod.rs  psci.rs  topology.rs
src/fs/: binfmt_misc.rs  btrfs.rs  cdfs.rs  cgroupfs.rs  close_range.rs  dcache.rs  devfs.rs  elf.rs  eventfd.rs  exfat.rs  ext2.rs  ext4.rs  ext4_write.rs  fanotify.rs  fat32.rs  fcntl.rs  flock.rs  fs_recognizer.rs  getdents.rs  initramfs.rs  inotify.rs  io_syscalls.rs  ioctl.rs  ipc_proxy_scheme.rs  jbd2.rs  mod.rs  mount.rs  nfs.rs  ntfs.rs  overlayfs.rs  path.rs  pidfd.rs  pipe.rs  poll.rs  poll_ext.rs  proc_debug.rs  process_fd.rs  procfs.rs  procfs_binfmt.rs  ramfs.rs  (+14 more)
src/gdbstub/: mod.rs  rsp.rs  rsp_riscv.rs  serial.rs
src/init/: boot_info.rs  mod.rs  schemes.rs  service_manager.rs
src/initramfs/: mod.rs
src/input/: mod.rs
src/io_uring/: Sqe.rs  cqe.rs  mod.rs  ops accept.rs  ops connect.rs  ops mod.rs  ops read.rs  ops write.rs  ops.rs  ring.rs  ring_buf.rs  ring_pub.rs  scheduler integration.rs  scheduler_integration.rs  sqe.rs  syscall.rs  token.rs  waker.rs
src/ipc/: key.rs  mod.rs  mq.rs  msg.rs  pipe_scheme.rs  sem.rs  shm.rs
src/irq/: mod.rs
src/kernel/: architecture.rs  mod.rs  panic.rs  rand.rs  uaccess.rs  utils.rs
src/kmtest/: fs.rs  ipc.rs  mm.rs  mod.rs  proc.rs  sync.rs
src/loader/: auxv.rs  elf64.rs  mod.rs
src/mm/: boot_memory.rs  core_dump.rs  cow_fault.rs  heap.rs  kasan.rs  kstack.rs  memmap.rs  mlock.rs  mmap.rs  mod.rs  page_fault.rs  phys.rs  pmm.rs  rss.rs  slab.rs  swap.rs
src/net/: arp.rs  dhcp.rs  dns.rs  eth.rs  ethernet.rs  icmp.rs  icmpv6.rs  ip.rs  ipv4.rs  ipv6.rs  mod.rs  socket.rs  tcp.rs  udp.rs
src/proc/: cgroup.rs  clone.rs  context.rs  cow_fault.rs  creds.rs  cwd.rs  dynlink.rs  exec.rs  exit.rs  fork.rs  fork_syscall.rs  futex.rs  ipc.rs  itimer.rs  itimer_shim.rs  mod.rs  namespace.rs  nanosleep.rs  net_ns.rs  pid.rs  pid_ns.rs  proc_table.rs  process.rs  ptrace.rs  restart.rs  rlimit.rs  rusage.rs  sched_helpers.rs  scheduler.rs  seccomp_filter.rs  signal.rs  task_group.rs  task_types.rs  thread.rs  time_ns.rs  user_ns.rs  wait.rs
src/security/: aslr.rs  canary.rs  capset.rs  dac.rs  lsm.rs  mod.rs  pti.rs  seccomp.rs  smep_smap.rs
src/shell/: commands.rs  debugcon.rs  mod.rs  tty.rs
src/smp/: ipi.rs  mod.rs  percpu.rs
src/sync/: cancel.rs  futex.rs  mod.rs  poll_source.rs  spinlock.rs  wait_queue.rs
src/syscall/: dispatcher_context.rs  driver.rs  errno.rs  fs.rs  kmtest.rs  mod.rs  musl_compat.rs  nr.rs  openat2_mincore.rs  p0_gaps.rs  posix_full.rs  routers.rs  sched.rs  scheme.rs  signal_nr.rs  socket_gaps.rs  stubs.rs
src/time/: clint.rs  clock.rs  hpet.rs  mod.rs  timer.rs  timerfd.rs  tsc.rs
src/tty/: ldisc.rs  mod.rs  pts_fs.rs  pty.rs  serial.rs  serial_ldisc.rs  termios.rs
src/wayland/: compositor.rs  server.rs
targets/: aarch64-kernel.json  aarch64-uefi-loader.json  riscv64-kernel.json  riscv64-uefi-loader.json  x86_64-kernel.json  x86_64-multiboot.json  x86_64-uefi-loader.json
tests/: README.md  epoll_basic.c  fork_exec_wait.c  futex_cmp_requeue.c  futex_robust_death.c  futex_thundering_herd.c  mmap_cow_fork.c  pipe_stress.c  poll_close_race.c  pthread_barrier.c  pthread_test.c  run_smoke.sh  run_tests.sh  sched_cfs_fairness.c  sched_deadline_cbs.c  sched_rr_fairness.c  signal_restart.c  test_helpers.h  vfs_concurrent_creat.c  vfs_rename_unlink.c
tests/shared/: epoll_basic.c  fork_exec_wait.c  futex_cmp_requeue.c  futex_robust_death.c  futex_thundering_herd.c  mmap_cow_fork.c  pipe_stress.c  pthread_test.c  (+11 more)
tools/: apply_ext4_rw_journal_xattr_fixes.py  build_initramfs.sh  build_userspace.sh  mkdisk.sh  mkinitramfs.sh  run_qemu.sh
userspace/: Makefile
xtask/: Cargo.toml
xtask/src/: main.rs
(+261 files in other folders)
