[workspace]
members = [
    ".",
    "xtask",
    "crates/scheme-api",
    "crates/kmtest",
    "crates/kmtest-macros",
]
resolver = "2"

[package]
name = "rustos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Darion McGee <mcgeedarion@example.com>"]
description = "A Rust-based operating system kernel with UEFI and debugging support"
license = "MIT"
repository = "https://github.com/mcgeedarion/RustOS-MoxideOS"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "rustos"
path = "src/main.rs"

[dependencies]
kmtest = { path = "crates/kmtest", optional = true }
scheme-api = { path = "crates/scheme-api" }

# Synchronisation primitives. `crate::sync::mutex` re-exports `spin::Mutex`,
# and many subsystems use `spin::Mutex` / `spin::Once` directly.
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "once", "lazy"] }

# cfg_if! macro used by various arch-gated modules.
cfg-if = "1"

# log crate used by drivers/firmware/networking code paths.
log = { version = "0.4", default-features = false }

# Add your kernel dependencies here
# Examples:
# x86_64 = "0.15"
# uart_16550 = "0.3"

[build-dependencies]
# Used by build.rs::compile_crt() to build the freestanding C runtime stubs
# (src/init/crt/*.c) into librustos_crt.a and link it into the kernel.
cc = "1"

[features]
# GUESS: callers reference crate::input and crate::debug unconditionally,
# so the gating features must be on by default for a normal build.
default = ["input_events", "gdbstub"]

# Evdev / virtio-input subsystem.
input_events = []

# Optional AMD GPU GEM backend.
amdgpu = []

# Optional cgroup security/resource modules.
cgroups = []

# GDB Remote Serial Protocol stub.
gdbstub = []

# Build as a UEFI loader/application.
uefi_boot = []

# Full debug build: GDB RSP stub + rich oops/backtrace + trace drain.
# Use `--features debug` as the single flag for a debug kernel.
# `debugstub` and `trace` can still be enabled individually if needed.
debug = ["debugstub", "trace"]

# GDB Remote Serial Protocol stub only (no oops/trace overhead).
debugstub = []

# Ring-buffer trace event drain, flushed to serial on panic.
trace = []

# Enable in-kernel test harness.  Build with:
#   cargo build --features kmtest --target x86_64-unknown-none
kmtest = ["dep:kmtest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true